tests/baselines/reference/commaOperatorOtherInvalidOperation.errors.txt
tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts(6,5): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts(12,9): error TS2322: Type 'T2' is not assignable to type 'T1'.
  'T2' is assignable to the constraint of type 'T1', but 'T1' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts (2 errors) ====
    //Expect to have compiler errors
    //Comma operator in fuction arguments and return
    function foo(x: number, y: string) {
        return x, y;
    }
    var resultIsString: number = foo(1, "123"); //error here
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    //TypeParameters
    function foo1<T1, T2>() {
        var x: T1;
        var y: T2;
        var result: T1 = (x, y); //error here
            ~~~~~~
!!! error TS2322: Type '{|T2|0|}' is not assignable to type '{|T1|1|}'.
!!! error TS2322:   '{|T2|2|}' is assignable to the constraint of type '{|T1|3|}', but '{|T1|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:9:19
!!! annotated symbol 1 tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:9:15
!!! annotated symbol 2 tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:9:19
!!! annotated symbol 3 tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:9:15
!!! annotated symbol 4 tests/cases/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:9:15
    }